# weather-station

./: .gitmodules  README.md  flake.nix
.direnv/: flake-profile-18-link
StationFirmware/: .clangd  StationFirmware.ino  arduino-cli.yaml  config.h.example  sketch.yaml  ulp_riscv.S
StationFirmware/.zed/: settings.json  tasks.json
StationFirmware/include/: StreamDebugger.h  cellular.hpp  power.hpp  utilities.h
StationFirmware/include/sensors/: Anemometer.h  RainGauge.h  UVI.h  WindVane.h
StationFirmware/src/: cellular.cpp  power.cpp
StationFirmware/src/sensors/: Anemometer.cpp  RainGauge.cpp  UVSensor.cpp  WindVane.cpp
firmware/: .clangd  .gitignore  DEVELOPMENT.md  README.md  flake.nix  sdkconfig
firmware/.zed/: tasks.json
firmware/components/argentdata/: .clangd  CMakeLists.txt  argentdata.c
firmware/components/argentdata/include/: argentdata.h  ulp_vars.h
firmware/components/argentdata/ulp/: config.h  main.c  ulp_riscv_timer.h
firmware/components/lps22/: CMakeLists.txt  lps22.c
firmware/components/shtc3/: NOTICE.txt  README.md  shtc3.c
firmware/main/: CMakeLists.txt  config.h  config.h.example  idf_component.yml  main.c  main.cpp  modem.cpp  modem.hpp  mqtt.cpp
firmware/main/include/: modem.hpp  sensors.hpp
schematic/: .gitignore  EasyEDA.kicad_sym  MainBoard.kicad_pcb  MainBoard.kicad_pro  MainBoard.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table  weather_station_symbols.kicad_sym
schematic/EasyEDA.pretty/: LQFN-56_L7.0-W7.0-P0.4-EP.kicad_mod
schematic/weather station.pretty/: TSIM7080G.kicad_mod
(+1 files in other folders)
